force-app/main/default/objects/OpportunityDocumentAlyante__c/OpportunityDocumentAlyante__c.object-meta.xml
<CustomObject>
    <label>Opportunity - Document Alyante</label>
    <nameField>
        <displayFormat>Doc-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity - Documents Alyante</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>