force-app/main/default/objects/OpportunityDocumentAlyante__c/fields/DocumentAlyante__c.field-meta.xml
<CustomField>
    <fullName>DocumentAlyante__c</fullName>
    <label>Document Alyante</label>
    <referenceTo>DocumentAlyante__c</referenceTo>
    <relationshipLabel>Opportunity - Documents Alyante</relationshipLabel>
    <relationshipName>OpportunityDocumentsAlyante</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>