force-app/main/default/objects/OpportunityDocumentAlyante__c/fields/DocumentAlyanteExtIdAlyante__c.field-meta.xml
<CustomField>
    <fullName>DocumentAlyanteExtIdAlyante__c</fullName>
    <formula>DocumentAlyante__r.ExtIdAlyante__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Alyante ExtIdAlyante</label>
    <type>Text</type>
</CustomField>