force-app/main/default/objects/OpportunityDocumentAlyante__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity - Documents Alyante</relationshipLabel>
    <relationshipName>OpportunityDocumentsAlyante</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>