force-app/main/default/objects/OpportunityDocumentAlyante__c/fields/OpportunityExtId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityExtId__c</fullName>
    <formula>Opportunity__r.ExtId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ExtId</label>
    <type>Text</type>
</CustomField>